[project]
name = "nist"
version = "0.1.0"
description = "NIST Cryptography Implementation including post-quantum algorithms"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "cryptography>=42.0.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
